# Boat-autopilot

./: .gitignore  .travis.yml  Doxyfile  README.md
controller/CAPTAIN/: CAPTAIN.sln  CMakeLists.txt
controller/CAPTAIN/CAPTAIN/: Autopilot.cpp  Autopilot.h  CAPTAIN.vcxproj  CAPTAIN.vcxproj.filters  CMakeLists.txt  Coordinate.cpp  Coordinate.h  CoverageRectangle.cpp  CoverageRectangle.h  DCMotor.cpp  DCMotor.h  GL_AlbersEqualArea.cpp  GL_AlbersEqualArea.h  GL_Constants.h  GL_Ellipsoid.cpp  GL_Ellipsoid.h  GL_EllipticFunction.cpp  GL_EllipticFunction.h  GL_Math.cpp  GL_Math.h  GL_Rhumb.cpp  GL_Rhumb.h  GL_TransverseMercator.cpp  GL_TransverseMercator.h  GPSStatus.cpp  GPSStatus.h  IAutopilot.h  IGPIO.h  IGPS.h  IMotorStatusGetter.h  INavigation.h  IPositionMotor.h  IReceiver.h  ISerial.h  ISpeedMotor.h  IStatus.h  ITransmitter.h  IWiringPi.h  JSONReceiver.cpp  JSONReceiver.h  (+27 more)
controller/CAPTAIN/integration.test.CAPTAIN/: Autopilot_Servo_DCMotor_integration_test.cpp  JSONReceiver_Navigation_Autopilot.cpp  JSONReceiver_Navigation_JSONTransmitter.cpp  JSONReceiver_Navigation_JSONTransmitter_Autopilot_Motors.cpp  integration.test.CAPTAIN.vcxproj  integration.test.CAPTAIN.vcxproj.filters
controller/CAPTAIN/main.CAPTAIN/: Source.cpp  main.CAPTAIN.vcxproj  main.CAPTAIN.vcxproj.filters
controller/CAPTAIN/non-automatic.test.CAPTAIN/: Coverage.cpp  P2P.cpp  non-automatic.test.CAPTAIN.vcxproj  non-automatic.test.CAPTAIN.vcxproj.filters  test_template.cpp
controller/CAPTAIN/unit.test.CAPTAIN/: Autopilot_tests.cpp  Coordinate_tests.cpp  DCMotor_tests.cpp  GPSStatus_tests.cpp  (+12 more)
(+72 files in other folders)
